# quantum-pulse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CRATE_SUMMARY.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE_CHECKLIST.md  USER-GUIDE.md
.cargo/: config.toml
examples/: async_profiling.rs  basic.rs  custom_categories.rs  exclude_network_time.rs  macro_derive.rs  pause_unpause.rs  stack_pause.rs  trading_system.rs
quantum-pulse-macros/: Cargo.toml  README.md
quantum-pulse-macros/src/: lib.rs
src/: category.rs  collector.rs  lib.rs  metrics.rs  operation.rs  reporter.rs  timer.rs
tests/: macro_test.rs  pause_unpause_integration.rs  stack_pause_test.rs
